@@ -1,3 +1,8 @@
+2009-05-17  Fojtik Jaroslav  <JaFojtik@seznam.cz>
+
+	* coders/txt.c First attempt to read back txt file.
+	It is amazingly ineffective, but it seems to work.
+
 2009-05-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/resize.c (HorizontalFilter, VerticalFilter): When
